--- a/src/main/webapp/pages/home.xhtml
+++ b/src/main/webapp/pages/home.xhtml
@@ -12,6 +12,12 @@
 
         <h:form id="homeForm">
             <p:panelGrid styleClass="panelGrid">
+                <h1>
+                    LO54's School Catalog
+                </h1>
+                <h2>
+                    with
+                </h2>
                 <h:graphicImage library="img" name="logo_primefaces.png" styleClass="image"/>
             </p:panelGrid>
         </h:form>
